// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. group of topics 1`] = `
<View>
  <View>
    <View>
      <View>
        <Text>
          Football
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View>
        <Text>
          Manchester United FC
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View>
        <Text>
          Chelsea FC
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View>
        <Text>
          Arsenal
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View>
        <Text>
          Rugby Union
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`2. onpress handler is called with the expected args 1`] = `
Array [
  Array [
    "event",
    Object {
      "name": "Football",
      "slug": "football",
    },
  ],
]
`;

exports[`3. onpress sends analytics 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
      },
      "component": "Page",
      "object": "Article",
    },
  ],
  Array [
    Object {
      "action": "Pressed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
        "name": "Football",
        "slug": "football",
      },
      "component": "TopicLink",
      "object": "Article",
    },
  ],
]
`;
